# ssaangn-solver

./: .gitignore  Cargo.toml  README.md
.github/workflows/: pages.yml
data/: candidates.json  fallback.json  recent_answers.json  weights.json  words.json
scripts/: build_data.py  build_freq.py  oracle.sh  pick_secret.sh  validate_matcher.py
src/: data.rs  hangul.rs  input.rs  lib.rs  main.rs  matcher.rs  modes.rs  solver.rs
web/: index.html  main.js  style.css
